--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,20 +27,22 @@
             android:text="Alexandr Cheban"
             android:textSize="20dp">
         </TextView>
+
         <TextView
             android:id="@+id/responseTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
-            android:layout_marginTop="20dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="-4dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="-6dp"
             android:fontFamily="@font/montserrat_bold"
             android:gravity="center"
             android:text="ыываыв"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
+
     </RelativeLayout>
     <FrameLayout
         android:id="@+id/mainWindow"
@@ -69,6 +71,7 @@
         </Button>
 
         <Button
+            android:id="@+id/game1"
             android:layout_width="110dp"
             android:layout_height="50dp"
             android:onClick="BtnGame"
