--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/bg">
+
     <RelativeLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:id="@+id/header"
         android:background="@color/bar">
 
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="350dp"
+            android:layout_marginEnd="5dp"
+            android:adjustViewBounds="true"
+            android:backgroundTint="#FE6440"
+            android:contentDescription="Logout Button"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logout_90894" />
 
 
         <TextView
@@ -25,25 +39,13 @@
             android:fontFamily="@font/montserrat_bold"
             android:gravity="center"
             android:text="Alexandr Cheban"
-            android:textSize="20dp">
-        </TextView>
+            android:textSize="20dp"></TextView>
 
-        <TextView
-            android:id="@+id/responseTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="-6dp"
-            android:fontFamily="@font/montserrat_bold"
-            android:gravity="center"
-            android:text="ыываыв"
-            android:textSize="15sp" />
+
+
 
     </RelativeLayout>
+
     <FrameLayout
         android:id="@+id/mainWindow"
         android:layout_width="match_parent"
@@ -63,25 +65,7 @@
         android:paddingTop="10dp"
 
         >
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="50dp"
-            android:text="Главная"
-            android:layout_marginHorizontal="20dp">
-        </Button>
 
-        <Button
-            android:id="@+id/game1"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
-            android:onClick="BtnGame"
-            android:text="Играть"></Button>
-
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
-            android:text="Друзья"></Button>
     </LinearLayout>
 
 
