--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -11,29 +11,41 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Вопрос"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        />
 
     <!-- Аналогично добавляем кнопки для остальных вариантов ответов -->
 
+    <TextView
+        android:id="@+id/otvet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="187dp"
+        android:layout_marginEnd="43dp"
+        android:text="0"
+        android:textColor="@color/colorCorrect"
+        android:textSize="35sp" />
 
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="270dp">
+        android:layout_marginTop="290dp">
 
         <Button
             android:id="@+id/buttonAnswer1"
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="25dp"
+            android:layout_width="185dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
             android:text="Ответ 1" />
         <Button
             android:id="@+id/buttonAnswer2"
-            android:layout_width="170dp"
-            android:layout_height="60dp"
+            android:layout_width="185dp"
+            android:layout_height="75dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:text="Ответ 1" />
@@ -44,21 +56,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_below="@id/linear">
 
         <Button
             android:id="@+id/buttonAnswer3"
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="25dp"
+            android:layout_width="185dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
 
             android:text="Ответ 1" />
         <Button
             android:id="@+id/buttonAnswer4"
-            android:layout_width="170dp"
-            android:layout_height="60dp"
+            android:layout_width="185dp"
+            android:layout_height="75dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:text="Ответ 1" />
@@ -81,11 +93,13 @@
         android:layout_below="@id/progressBarTimer"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="199dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="154dp"
+        android:layout_marginStart="187dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="165dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="0"
         android:textSize="24sp" />
+
+
 
 </RelativeLayout>
